assets/css/custom.css
.cards {
  margin-right: 2rem;
  margin-left: 2rem;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  column-gap: 5em;
  row-gap: 5%;
  width: fit-content;
  height: fit-content;
  justify-items: center;
  justify-content: center;
  justify-self: center;
}

